<resources>
    <string name="app_name">Seven Winds Studio Test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail">e-mail</string>
    <string name="email_hint">example@example.com</string>
    <string name="Password">Пароль</string>
    <string name="Repeat_password">Повторите пароль</string>
    <string name="register">Регистрация</string>
    <string name="Login">Войти</string>
    <string name="go_to_pay">Перейти к оплате</string>
    <string name="on_map">На карте</string>
    <string name="pay">Оплатить</string>
    <string name="text_accept_order">Время ожидания заказа\n15 минут!\nСпасибо, что выбрали нас!</string>
    <string name="register_title_toolbar">Регистрация</string>
    <string name="Enter">Вход</string>
    <string name="register_new">Регистрация нового пользователя</string>
    <string name="map">Карта</string>
    <string name="near_coffee">Ближайшие кофейни</string>
    <string name="menu">Меню</string>
    <string name="total_price">ИТОГО:</string>
    <string name="youre_order">Ваш заказ</string>
    <string name="difference_passwords">Неодинаковые пароли!</string>
    <string name="register_error">Ошибка регистрации</string>
    <string name="empty_list_order">Вы ничего не заказали.\nНажмите кнопку \"Назад\" для просмотра меню.</string>
</resources>