<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.RegisterFragment">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/field_bottom_margin"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                style="@style/title_edit_text"

                android:text="@string/e_mail" />

            <EditText
                android:id="@+id/etEmailLogin"
                style="@style/register_login_editText"
                android:hint="@string/email_hint"
                android:inputType="text|textEmailAddress"
                android:text="pp@pp.com" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/field_bottom_margin"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                style="@style/title_edit_text"
                android:text="@string/Password"

                />

            <EditText
                android:id="@+id/etPasswordLogin"
                style="@style/register_login_editText"

                android:inputType="text|textPassword"
                android:text="pp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            style="@style/style_btn"

            android:text="@string/Login" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvRegisterNewUser"
        android:text="@string/register_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/item_subtitle"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>