<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.RegisterFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/field_bottom_margin"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                style="@style/title_edit_text"
                android:text="@string/e_mail" />

            <EditText
                android:id="@+id/etEmailRegister"
                style="@style/register_login_editText"

                android:hint="@string/email_hint"
                android:inputType="text|textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/field_bottom_margin"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                style="@style/title_edit_text"

                android:text="@string/Password" />

            <EditText
                android:id="@+id/etPasswordRegister"
                style="@style/register_login_editText"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/field_bottom_margin"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                style="@style/title_edit_text"
                android:text="@string/Repeat_password" />

            <EditText
                android:id="@+id/etPasswordRepeatRegister"
                style="@style/register_login_editText"
                android:inputType="textPassword" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/style_btn"
            android:text="@string/register"

            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>