<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.list_locations.LocationListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvListOrder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="100dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/tvAcceptOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/order_item" />


    <TextView
        android:id="@+id/tvAcceptOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"

        android:layout_marginBottom="36dp"
        android:fontFamily="@font/sf_ui_display_medium"
        android:gravity="center_horizontal"

        android:text="@string/text_accept_order"
        android:textColor="@color/base_text_color"
        android:textSize="@dimen/text_size_accept_order"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnPay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPay"
        style="@style/style_btn"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="19dp"
        android:text="@string/pay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        style="@style/item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/total_price"
        app:layout_constraintStart_toStartOf="@+id/rvListOrder"
        app:layout_constraintTop_toBottomOf="@+id/rvListOrder" />

    <TextView
        android:id="@+id/tv_total_sum"
        style="@style/item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2000"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/rvListOrder"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>